:bulb: endpoint para estudar memory leaks e att readme